[package]
name = "srcbundler"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
minifier = "0.3.5"
arboard = "3.4.1"
colored = "3.0.0"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
ctrlc = "3.2"



